--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -15,6 +15,8 @@
     ],
     "global-require": "off",
     "import/prefer-default-export": "off",
-    "no-unused-expressions": ["error", { "allowTaggedTemplates": true }]
+    "no-unused-expressions": ["error", { "allowTaggedTemplates": true }],
+    "jsx-a11y/label-has-associated-control": "off",
+    "arrow-parens": "off"
   }
 }
