--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -17,6 +17,9 @@
     "import/prefer-default-export": "off",
     "no-unused-expressions": ["error", { "allowTaggedTemplates": true }],
     "jsx-a11y/label-has-associated-control": "off",
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "no-underscore-dangle": "off",
+    "react/prop-types": "off",
+    "camelcase": "off"
   }
 }
